--- a/pages/pk/locate/locate.wxml
+++ b/pages/pk/locate/locate.wxml
@@ -18,7 +18,8 @@
   <view class="rcs " style="height:{{20}}px"></view>
 </view>
 <!-- 按钮 -->
-<view hidden="{{!pageTag}}" class="ccc rightButton z3">
+
+<view hidden="{{!pageTag || (!pks || (pks.length < 1))}}" class="ccc rightButton z3">
 
     
                 <view class=" rcc ">
@@ -49,7 +50,7 @@
                 </view>
 
 </view>
-<view hidden="{{!pageTag}}" class="ccc leftButton z3">
+<view hidden="{{!pageTag || (!pks || (pks.length < 1))}}" class="ccc leftButton z3">
                 <view class=" rcc ">
                                         <view  class="w-90 h-90 br-90 rcc box8 b-white" bindtap="searchLocation">
                                             <view class="rcc ">
@@ -90,10 +91,10 @@
 
 
 </view>
-<view class="bottomPk css z3">
+<view  hidden="{{!pageTag}}" class="bottomPk css z3">
      
         <view class="css z3">
-            <swiper hidden="{{!pks || (pks.length < 1)}}" style="height:85vw" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" circular="{{circular}}" vertical="{{vertical}}" current="{{current}}" bindchange="changePk" >
+            <swiper wx:if="{{!(!pks || (pks.length < 1))}}"  style="height:85vw" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" circular="{{circular}}" vertical="{{vertical}}" current="{{current}}" bindchange="changePk" >
                 <block wx:for="{{pks}}" wx:for-index="bindex" wx:for-item="pk" wx:key="postkey">
                     <swiper-item  >
  
@@ -233,9 +234,63 @@
                     </swiper-item>
                 </block>
             </swiper>
+            <view wx:else class="ccc">
+                <view class="css"  style="width: 90vw">
+                    <view  hidden="{{!pageTag}}" class="rbc">
+                        <view class=" rcc ">
+                                            <view  class="w-90 h-90 br-90 rcc box8 b-white" bindtap="userCenter">
+                                                    <image wx:if="{{user}}" class="rcc w-80 h-80 br-80 border10-2" mode="aspectFill" src="{{user.imgUrl}}"></image>
+                                                    <image wx:else class="rcc w-50 h-50 " mode="aspectFit" src="/images/user.png"></image>
+                                            
+                                            </view>
+                        </view>
+                        <view class="rcc">
 
-            <view class="h-30"></view>
+                            <view class=" rcc ">
+                                                <view  class=" w-90 h-90 br-90 rcc box8 b-white" bindtap="myFollow">
+                                                    <view class="rcc">
+                                                        <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/yu.png"></image>
+                                                    </view>
 
+                                                    </view>
+                            </view>
+                            <view class="w-70"></view>
+                            <view class=" rcc ">
+                                                <view  class=" w-90 h-90 br-90 rcc box8 b-white" bindtap="myInvite">
+                                                    <view class="rcc">
+                                                        <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/care.png"></image>
+                                                    </view>
+
+                                                    </view>
+                            </view>
+                            <view class="w-70"></view>
+                            <view class=" rcc ">
+                                                    <view class="w-90 h-90 br-90 rcc box8 b-white" bindtap="myPk" >
+                                                        <view class="rcc ">
+                                                            <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/collect.png"></image>
+                                                        </view>
+
+                                                    </view>
+                            </view>
+
+                        </view>
+                    </view>
+                    <view class="h-30"></view>
+                    <view class="rcs b-white br-20" style="width: 90vw">
+                        <view class="rcs p-30"  bindtap="searchLocation">
+                            <view class="rcc"><image class="rcc w-50 h-50 " mode="aspectFit" src="/images/search.png"></image></view>
+                            <view class="w-30"></view>
+                            <view class="rcs fs-35 fw-400 c-3">搜索卡点</view>
+                        </view>
+
+                    </view>
+                </view>
+
+
+
+            </view>
+
+            <view class="h-50"></view>
         </view>
 
 
