--- a/pages/pk/locationImages/locationImages.wxml
+++ b/pages/pk/locationImages/locationImages.wxml
@@ -1,5 +1,5 @@
-<view class="css z3 b-48"  style="min-height:100vh">
-    <view  class="css" style="width: 100vw; height: 80vw" >
+<view class="css z3 b-white"  style="min-height:100vh">
+    <!-- <view  class="css" style="width: 100vw; height: 80vw" >
         <image style="width: 100vw; height: 80vw" src="{{pkBackUrl}}" mode="aspectFill"></image>
         <view class="absolute cbs" style="width: 100vw; height: 80vw" >
             <view></view>
@@ -10,49 +10,56 @@
              </view>
         </view>
 
-    </view>
+    </view> -->
+    <view wx:if="{{images && images.length>0}}" class="css">
+        <view class="css" wx:for="{{images}}" wx:for-index="bindex" wx:for-item="image" wx:key="postkey">
+            <view class="css" style="width: 100vw; height: 80vw" >
 
-    <view class="css" wx:for="{{images}}" wx:for-index="bindex" wx:for-item="image" wx:key="postkey">
-        <view class="css" style="width: 100vw; height: 80vw" >
-
-            <image  style="width: 100vw; height: 80vw" src="{{image.imgUrl}}" mode="aspectFill"></image>
-            <view class="absolute cbs" style="width: 100vw; height: 80vw" >
-                <view class="rbc p-20">
-                    <view class="rcc">
-                        <!-- <view hidden="{{user.userId != image.user.userId}}" class="rcc fs-30 fw-700 c-10 pl-20 pr-20 pt-10 pb-10 b-48 br-10" >{{image.statu.name}}</view>  -->
-                    </view>
-                    <view class="rcc">
-               
-                    </view>
-                    
-
-
-                </view>
-                <view class="rbc p-20">
-                    <view class="rcc">
-                        <view class="rcc h-60 w-60 br-60 b-white box8"><image class="rcc w-50 h-50 br-50" src="{{image.user.imgUrl}}" mode="aspectFill"></image></view>
-                        <view class="w-20"></view>
-                        <view class="rus line-1-start fs-30 fw-650 c-white w-200 f-shadow3">{{image.user.userName}}</view>
-                    </view>
-                    <view class="rcc">
-                        <view hidden="{{user.userId != image.user.userId && user.userId != creator.userId}}" class="rcc fs-25 fw-400 c-1 pl-20 pr-20 pt-10 pb-10 b-white br-10" bindtap="deleteImage" data-index="{{bindex}}" data-imageid="{{image.imageId}}">删除</view>
-                        <view hidden="{{user.userId != creator.userId}}" class="w-30"></view>
-                        <view hidden="{{user.userId != creator.userId}}" class="rcc fs-25 fw-400 c-1  pl-20 pr-20 pt-10 pb-10  b-white br-10" bindtap="setPkBack" data-index="{{bindex}}" data-image="{{image}}">设置为封面</view>
-                    </view>
-                    
-
-
-                </view>
-            </view>
-
-           
-        </view>
+                <image  style="width: 100vw; height: 80vw" src="{{image.imgUrl}}" mode="aspectFill"></image>
+                <view class="absolute cbs" style="width: 100vw; height: 80vw" >
+                    <view class="rbc p-20">
+                        <view class="rcc">
+                            <!-- <view hidden="{{user.userId != image.user.userId}}" class="rcc fs-30 fw-700 c-10 pl-20 pr-20 pt-10 pb-10 b-48 br-10" >{{image.statu.name}}</view>  -->
+                        </view>
+                        <view class="rcc">
                 
-    </view>
-    <view hidden="{{!nomore}}" class="css h-300">
-        <view hidden="{{!nomore}}" class="rcc h-100 fs-30 fw-400 c-3">没有更多...</view>
-    </view>
+                        </view>
+                        
 
+
+                    </view>
+                    <view class="rbc p-20">
+                        <view class="rcc">
+                            <view class="rcc h-60 w-60 br-60 b-white box8"><image class="rcc w-50 h-50 br-50" src="{{image.user.imgUrl}}" mode="aspectFill"></image></view>
+                            <view class="w-20"></view>
+                            <view class="rus line-1-start fs-30 fw-650 c-white w-200 f-shadow3">{{image.user.userName}}</view>
+                        </view>
+                        <view class="rcc">
+                            <view hidden="{{user.userId != image.user.userId && user.userId != creator.userId}}" class="rcc fs-25 fw-400 c-1 pl-20 pr-20 pt-10 pb-10 b-white br-10" bindtap="deleteImage" data-index="{{bindex}}" data-imageid="{{image.imageId}}">删除</view>
+                            <view hidden="{{user.userId != creator.userId}}" class="w-30"></view>
+                            <view hidden="{{user.userId != creator.userId}}" class="rcc fs-25 fw-400 c-1  pl-20 pr-20 pt-10 pb-10  b-white br-10" bindtap="setPkBack" data-index="{{bindex}}" data-image="{{image}}">设置为封面</view>
+                        </view>
+                        
+
+
+                    </view>
+                </view>
+
+            
+            </view>
+                    
+        </view>
+        <view hidden="{{!nomore}}" class="css h-300">
+            <view hidden="{{!nomore}}" class="rcc h-100 fs-30 fw-400 c-3">没有更多...</view>
+        </view>
+    </view>
+    <view wx:else class="ccc z2 "  style="padding-top:30vh">
+        <view class="rcc">
+            <image class="h-400 w-400" mode="aspectFit" src="{{emptyImage}}" ></image>
+        </view>
+        <view class="fs-30 fw-400 c-3">暂无图片</view>
+
+    </view>
     <!-- <view class="rcc">
         <view class="fs-25 fw-400 c-4 p-20" bindtap="setUser" data-user="U1">U1</view>
         <view class="fs-25 fw-400 c-4 p-20" bindtap="setUser" data-user="U1">U2</view>
