--- a/pages/pk/locate/locate.wxml
+++ b/pages/pk/locate/locate.wxml
@@ -91,10 +91,10 @@
 
 
 </view>
-<view  hidden="{{!pageTag}}" class="bottomPk css z3">
+<view  hidden="{{!pageTag}}" class="bottomPk css z3 bottomBack1">
      
         <view class="css z3">
-            <swiper wx:if="{{!(!pks || (pks.length < 1))}}"  style="height:85vw" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" circular="{{circular}}" vertical="{{vertical}}" current="{{current}}" bindchange="changePk" >
+            <swiper wx:if="{{!(!pks || (pks.length < 1))}}"  style="height:85vw" indicator-dots="{{indicatorDots}}" circular="{{circular}}" vertical="{{vertical}}" current="{{current}}" bindchange="changePk" >
                 <block wx:for="{{pks}}" wx:for-index="bindex" wx:for-item="pk" wx:key="postkey">
                     <swiper-item  >
  
@@ -236,6 +236,7 @@
             </swiper>
             <view wx:else class="ccc">
                 <view class="css"  style="width: 90vw">
+                    <view class="h-50"></view>
                     <view  hidden="{{!pageTag}}" class="rbc">
                         <view class=" rcc ">
                                             <view  class="w-90 h-90 br-90 rcc box8 b-white" bindtap="userCenter">
@@ -276,8 +277,8 @@
                         </view>
                     </view>
                     <view class="h-30"></view>
-                    <view class="rcs b-white br-20" style="width: 90vw">
-                        <view class="rcs p-30"  bindtap="searchLocation">
+                    <view class="rcs b-white br-20" style="width: 90vw" bindtap="searchLocation">
+                        <view class="rcs p-30"  >
                             <view class="rcc"><image class="rcc w-50 h-50 " mode="aspectFit" src="/images/search.png"></image></view>
                             <view class="w-30"></view>
                             <view class="rcs fs-35 fw-400 c-3">搜索卡点</view>
@@ -285,9 +286,6 @@
 
                     </view>
                 </view>
-
-
-
             </view>
 
             <view class="h-50"></view>
